# PP

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dfs  dfs.cpp  dfs_ratio  dfs_ratio.cpp  input.txt  main  main.cpp  merge_results.sh  result.txt  time  time.cpp  time2  time2.cpp
analysis/: plt_n_k.py
include/: Agent.h  BaseProtocol.h  CompleteGraph.h  KDivisionProtocol.h  KDivisionState.h  Simulator.h  StringProtocol.h  StringState.h
include/agent/: Agent.h
include/graph/: CompleteGraph.h  Graph.h  RandomConnectedGraph.h
include/protocol/: ArbitraryKDivisionWithBSProtocol.h  ArbitraryKDivisionWithBSSimpleProtocol.h  BaseProtocol.h  KDivisionProtocol.h  ProtocolTraits.h  RatioKDivisionParaProtocol.h  RatioKDivisionProtocol.h  Rule.h  StringProtocol.h
include/simulation/: Evaluator.h  Simulator.h
include/state/: ArbitraryKDivisionWithBSSimpleState.h  ArbitraryKDivisionWithBSState.h  KDivisionState.h  RatioKDivisionParaState.h  RatioKDivisionState.h  State.h  StringState.h
include/util/: AvgResultsDatabaseManager.h  DatabaseManager.h  ExpectedGoHomeCalculator.cpp  FullResultsDatabaseManager.h  ThreadPool.h  go
src/: CompleteGraph.cpp  StringProtocol.cpp  StringState.cpp  main.cpp
src/graph/: CompleteGraph.cpp  RandomConnectedGraph.cpp
src/include/: population_protocol.h  population_protocol_simtime.h  population_protocol_simtime_otherwork.h  population_protocol_simtime_ourwork.h  random_generator.h  utils.h
src/protocol/: StringProtocol.cpp
src/state/: StringState.cpp
src/timer/: population_protocol.cpp  population_protocol_simtime.cpp  population_protocol_simtime_otherwork.cpp  population_protocol_simtime_ourwork.cpp  utils.cpp
src/util/: AvgResultsDatabaseManager.cpp  ExpectedTimeCalculator.cpp  FullResultsDatabaseManager.cpp  expected_time
src/util/RandomWalk/: B_matrix.csv  C_matrix.csv  cal_lower_bound.py  draw.py  draw_diff_graph.py  result.txt
src/util/RandomWalk/com_pro_data/: draw.py  n_120.txt  n_160.txt  n_200.txt
src/util/RandomWalk/sim_data/: com_data.txt  random_data.txt  star_data.txt  varing_k_data.txt
src/util/RandomWalk/theo_data/: theo_data_com.txt  theo_data_diff_g.txt  theo_data_random.txt  theo_data_star.txt
src/utils/: utils.cpp
